// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lazy.spec.ts test 1`] = `
{
  "error": [AggregateError: ggregateError:
    at Object],
  "message": "ggregateError:
    at Object",
  "prefix": "AggregateError: ",
  "rawTrace": Any<Array>,
  "stack": Any<String>,
  "type": "AggregateError",
}
`;

exports[`lazy.spec.ts test2 1`] = `
{
  "error": [AggregateError: ggregateError:],
  "message": "ggregateError:",
  "prefix": "AggregateError: ",
  "rawTrace": Any<Array>,
  "stack": Any<String>,
  "type": "AggregateError",
}
`;

exports[`lazy.spec.ts test3 1`] = `
{
  "error": [AggregateError: AggregateError:],
  "message": "AggregateError:",
  "prefix": "AggregateError: ",
  "rawTrace": Any<Array>,
  "stack": Any<String>,
  "type": "AggregateError",
}
`;

exports[`lazy.spec.ts test4 1`] = `
{
  "error": [AggregateError2: AggregateError:],
  "message": "AggregateError:",
  "prefix": "AggregateError2: ",
  "rawTrace": Any<Array>,
  "stack": Any<String>,
  "type": "AggregateError2",
}
`;
